--- a/application/package.json
+++ b/application/package.json
@@ -6,12 +6,21 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "-": "0.0.1",
+    "bcrypt": "^5.0.1",
     "colors": "^1.4.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "express": "~4.16.1",
+    "express": "^4.17.1",
+    "express-flash": "0.0.2",
     "express-handlebars": "^5.3.0",
+    "express-mysql-session": "^2.1.6",
+    "express-session": "^1.17.1",
+    "express-validator": "^6.11.1",
     "morgan": "~1.9.1",
-    "mysql2": "^2.2.5"
+    "multer": "^1.4.2",
+    "mysql2": "^2.2.5",
+    "session": "^0.1.0",
+    "sharp": "^0.28.2"
   }
 }
