--- a/application/package.json
+++ b/application/package.json
@@ -20,6 +20,7 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
+    "node-pre-gyp": "^0.17.0",
     "session": "^0.1.0",
     "sharp": "^0.28.2"
   }
